// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test overflow distribute 1`] = `
Object {
  "groups": Object {
    "a": "1",
    "b": "2",
    "c": "3",
  },
  "students": Object {
    "1": "a",
    "10": "a",
    "2": "a",
    "3": "b",
    "4": "b",
    "5": "c",
    "6": "c",
    "7": "a",
    "8": "b",
    "9": "c",
  },
}
`;

exports[`test overflow not-distribute 1`] = `
Object {
  "groups": Object {
    "Default": true,
    "a": "1",
    "b": "2",
    "c": "3",
  },
  "students": Object {
    "1": "a",
    "10": "Default",
    "2": "a",
    "3": "b",
    "4": "b",
    "5": "c",
    "6": "c",
    "7": "Default",
    "8": "Default",
    "9": "Default",
  },
}
`;
